<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WiFi分析家</string>
    <string name="action_about">关于</string>
    <string name="finish">finish</string>
    <string name="action_speed">查看网速</string>

    <string name="action_doudong">查看抖动</string>
    <string name="action_lost">查看丢包率</string>
    <string name="action_yanchi">查看延迟</string>
    <string name="title_activity_about">关于</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_speed">网速</string>

    <string name="title_activity_doudong">抖动</string>
    <string name="title_activity_lost">丢包率/延迟/抖动</string>
    <string name="title_activity_chart">时间曲线</string>
    <string name="open_drawer">抽屉打开了</string>
</resources>